--- a/backend_deposit/templates/deposit/birpay_order_info.html
+++ b/backend_deposit/templates/deposit/birpay_order_info.html
@@ -24,15 +24,20 @@
           <!-- Дубликаты в ряд -->
           <div class="col-md-auto">
             <h4>Дубликаты ({{ duplicates|length }})</h4>
+/
             <div style="display: flex; gap: 15px;">
-              {% for order in duplicates %}
+              {% for double_order in duplicates %}
                 <div style="text-align: center;">
-                  <b>Заказ №{{ order.merchant_transaction_id }} от {{ order.created_at|date:"H:i:s" }}</b><br>
-                  {% if order.check_file %}
-                    <img src="{{ order.check_file.url }}" style="height: 400px; width: auto;"><br>
-                  {% else %}
-                    <span>Нет изображения</span>
-                  {% endif %}
+                  <b>Заказ №{{ double_order.merchant_transaction_id }} от {{ double_order.created_at|date:"H:i:s" }}</b><br>
+                    Статус: {{ double_order.status }}<br>
+                      Сумма {{ double_order.amount }}<br>
+                      Смс {{ double_order.incoming_id }} от {{ double_order.incoming_register_date|date:"H:i:s" }}<br>
+                      Cумма смс {{ double_order.incoming_pay }}
+{#                  {% if order.check_file %}#}
+{#                    <img src="{{ order.check_file.url }}" style="height: 400px; width: auto;"><br>#}
+{#                  {% else %}#}
+{#                    <span>Нет изображения</span>#}
+{#                  {% endif %}#}
                 </div>
               {% empty %}
                 <span>Дубликаты не найдены.</span>
