--- a/backend_deposit/templates/deposit/birpay_order_info.html
+++ b/backend_deposit/templates/deposit/birpay_order_info.html
@@ -6,8 +6,15 @@
     <div class="col-3">
 
         <div class="card row" style=""><b>Обновлено:</b><br>{{ object.updated_at|date:"Y-m-d H:i:s" }}</div>
-        <div class="card row" style=""><b>UserId:</b><br>{{ object.merchant_user_id }}</div>
-
+        <div class="card row" style="">
+            <b>UserId: {{ object.merchant_user_id }}</b><br>
+            Апрув {{ object.user_order_percent }}%: {{ object.user_orders_1 }}/{{ object.total_orders }} 
+        </div>
+        <div class="card row" style=""><b>Возможные смс:</b><br>
+            {% for  incoming in object.incomings.all %}
+                {{ incoming.id }} {{ incoming.pay }} azn {{ incoming.response_date|date:"H:i" }} {{ incoming.recipient }}<br>
+            {% endfor %}
+        </div>
     </div>
     <div class="col-9">
       <div class="row">
