--- a/backend_deposit/templates/deposit/birpay_order_info.html
+++ b/backend_deposit/templates/deposit/birpay_order_info.html
@@ -26,7 +26,7 @@
             {% if object.check_file %}
               <a href="{{ object.check_file.url }}" target="_blank">
                  <img src="{{ object.check_file.url }}"
-                     style="width: 400px; height: 600px; object-fit: contain; background: #eee; cursor: pointer;"
+                     style="max-width:100%; max-height:100%; background: #eee; cursor: pointer;"
                      onerror="this.src=''; this.alt='нет изображения';">
               </a>
             {% else %}
