--- a/backend_deposit/templates/deposit/birpay_order_info.html
+++ b/backend_deposit/templates/deposit/birpay_order_info.html
@@ -1,6 +1,7 @@
 {% load l10n %}
 {% localize off %}
 {% load filters %}
+    {% load static %}
 <div class="" style="align-items: flex-start; gap: 30px;">
 
   <div class="row">
@@ -14,7 +15,9 @@
         </div>
         <div class="card row" style=""><b>Возможные смс:</b><br>
             {% for  incoming in object.incomings.all %}
-                {{ incoming.id }} {{ incoming.pay }} azn {{ incoming.response_date|date:"H:i" }} {{ incoming.recipient }}<br>
+                <div class="row">
+                    {{ incoming.id }}<img onclick="copyTextToClipboard({{ incoming.id }})" style="opacity: 0.5; width: 25px; height: 25px; object-fit: contain;" src="{% static '/img/copy.png' %}">{{ incoming.pay }} azn {{ incoming.response_date|date:"H:i" }} {{ incoming.recipient }}
+                </div>
             {% endfor %}
         </div>
         <div class="card row" style=""><b>Gpt данные: {{ object.gpt_flags|as_bin }}</b><br>
@@ -28,8 +31,8 @@
       <div class="row">
 
             <!-- Основное изображение -->
-            <h3>Чек заказа:</h3>
-            <b>Заказ №{{ object.merchant_transaction_id }}</b><br>
+            <h3>Чек заказа (ID {{ object.id }}):</h3>
+            <span>M Tx ID {{ object.merchant_transaction_id }}:  b_id {{ object.birpay_id }}<span><br>
             {% if object.check_file %}
               <a href="{{ object.check_file.url }}" target="_blank">
                  <img src="{{ object.check_file.url }}"
@@ -65,3 +68,45 @@
 </div>
 
 {% endlocalize %}
+
+<script>
+    function showCopyToast() {
+        var toast = document.getElementById('copy-toast');
+        toast.style.display = 'block';
+        setTimeout(function() {
+            toast.style.opacity = 1;
+        }, 10);
+        setTimeout(function() {
+            toast.style.opacity = 0;
+            setTimeout(function() {
+                toast.style.display = 'none';
+            }, 300);
+        }, 1200);
+    }
+    
+    function copyTextToClipboard(text) {
+        if (navigator.clipboard && window.isSecureContext) {
+            navigator.clipboard.writeText(text).then(
+                function() { showCopyToast(); },
+                function(err) { alert('Ошибка копирования: ' + err); }
+            );
+        } else {
+            var textArea = document.createElement("textarea");
+            textArea.value = text;
+            textArea.style.position = "fixed";
+            textArea.style.top = "-1000px";
+            document.body.appendChild(textArea);
+            textArea.focus();
+            textArea.select();
+    
+            try {
+                document.execCommand('copy');
+                showCopyToast();
+            } catch (err) {
+                alert('Ошибка копирования: ' + err);
+            }
+    
+            document.body.removeChild(textArea);
+        }
+    }
+</script>
