--- a/backend_deposit/templates/deposit/birpay_panel.html
+++ b/backend_deposit/templates/deposit/birpay_panel.html
@@ -79,7 +79,7 @@
 
     <div class="row">
     <div class="col-md-12" >
-         <table id="table" class=" table table-bordered table-hover table-sm ">
+         <table id="table" class=" my-table table table-bordered table-hover table-sm ">
             <thead>
                 <tr>
                     <th></th>
@@ -95,21 +95,19 @@
             <tbody>
             {% for order in page_obj %}
                 <tr>
-
-<td class="text-center align-middle" style="width:40px;">
-    <button class="btn btn-link p-0"
-            onclick="toggleRawData({{ order.birpay_id }}, this); return false;"
-            style="border:none; background:transparent;"
-            title="Подробнее">
-        <img src="{% static 'img/drop-down.png' %}" alt="Подробнее"
-             style="width: 28px; height: 28px; opacity: 0.7; transition: transform 0.2s;">
-    </button>
-</td>
+                    <td class="text-center align-middle"
+                        style="width:40px; cursor:pointer; color:#0d6efd; font-weight:500;"
+                        onclick="toggleRawData({{ order.birpay_id }}, this); return false;"
+                        title="Подробнее"
+                        onmouseover="this.style.textDecoration='underline';"
+                        onmouseout="this.style.textDecoration='none';">
+                        ⏬
+                    </td>
                     <td {% if order.check_is_double %} style="background: red" {% endif %}>{{ order.merchant_transaction_id }}</td>
                     <td>{{ order.created_at|date:"H:i:s" }}</td>
-                    <td>{% if order.status == 0 %}<span style="color: gray">pending</span>
-                        {% elif order.status == 1 %}<span style="color: green">approve</span>
-                        {% elif order.status == 2 %}<span style="red: gray">decline</span>
+                    <td>{% if order.status == 0 %}<span style="background-color: rgba(172,171,171,0.57)">pending</span>
+                        {% elif order.status == 1 %}<span style="background-color: rgba(49,239,49,0.56)">approve</span>
+                        {% elif order.status == 2 %}<span style="background-color: rgba(255,0,0,0.54)">decline</span>
                         {% endif %}
                    </td>
 
