--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -24,6 +24,7 @@
             <li><a class="dropdown-item" href="{% url 'deposit:graph' %}">График</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:check_sms' %}">Проверить смс</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:incoming_checks' %}">Проверка бирпай</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:assign_cards_to_user' %}">Назначение карт</a></li>
           </ul>
         </li>
       </ul>
