--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -79,7 +79,7 @@
                     <th>Чек</th>
                     <th>Raw Data</th>
                     <th>GPT Data</th>
-                    <th><span title="Время | карта | сумма | сумма смс | смс карта | подтвердил бы">GPT res</span></th>
+                    <th><span title="Время | карта | сумма | смс одна | подтвердил бы">GPT res</span></th>
                     <th>RRR</th>
                 </tr>
             </thead>
