--- a/backend_deposit/templates/deposit/birpay_panel.html
+++ b/backend_deposit/templates/deposit/birpay_panel.html
@@ -88,6 +88,7 @@
                     <th>Created</th>
                     <th>Status</th>
                     <th>₼</th>
+                    <th>UserID</th>
                     <th>Card</th>
                     <th>СМС id</th>
                     <th>Действие</th>
@@ -126,7 +127,21 @@
                         <td>
                             <input size="5" name="orderamount_{{ order.id }}" value="{{ order.amount }}">
                         </td>
-                        <td>{{ order.card_number }}</td>
+
+                        <td>
+                                {% if order.is_moshennik %}<span style="background: rgba(120,48,255,0.64)">{{ order.merchant_user_id }}</span>
+                            {% else %}
+                                    {{ order.merchant_user_id}}
+                                {% endif %}
+
+                        </td>
+
+                        <td>
+
+                                    {{ order.card_number|slice:"-4:" }}
+
+
+                        </td>
                         <td>
                             <input name="orderconfirm_{{ order.id }}" value="{{ order.incoming_id|default_if_none:"" }}" class="my-input button">
                         </td>
@@ -136,7 +151,7 @@
                             <option value="approve" {% if order.status == 1 %}selected{% endif %}>approve</option>
                             <option value="hide" {% if order.status == 2 %}selected{% endif %}>hide</option>
                           </select>
-                        <button  class="my-button btn btn-warning btn-sm {% if order.status != 0 %}disabled{% endif %}">Ok</button>
+                        <button  class="my-button btn btn-warning btn-sm {% if order.status != 0 or order.is_moshennik %}disabled{% endif %}">Ok</button>
                         </td>
                     </form>
 
