--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -26,6 +26,7 @@
             <li><a class="dropdown-item" href="{% url 'deposit:incoming_checks' %}">Проверка бирпай</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:assign_cards_to_user' %}">Назначение карт</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:moshennik_list' %}">Список мошенников</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:users_stat' %}">Список юзеров</a></li>
           </ul>
         </li>
       </ul>
