--- a/backend_deposit/templates/deposit/birpay_panel.html
+++ b/backend_deposit/templates/deposit/birpay_panel.html
@@ -137,10 +137,7 @@
                         </td>
 
                         <td>
-
-                                    {{ order.card_number|slice:"-4:" }}
-
-
+                            ({{ order.uniq_card_count|default_if_none:"" }}) {{ order.card_number|slice:"-4:" }}
                         </td>
                         <td>
                             <input name="orderconfirm_{{ order.id }}" value="{{ order.incoming_id|default_if_none:"" }}" class="my-input button">
